Modify profile details in index.html
Updated profile information and image.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <body>
   <div class="profile-card">
   <img src="https://lh3.googleusercontent.com/pw/AP1GczMy8Q-06AHTne_vhUaMS18TAmQGgKODax1IadPrmlRcwOP7JmvQWjCVK7swB-VrKZcvb43sgggl95NvyngHgdJytyuXOCdbWgTXaBoB72CcqoOymlYZI9J5mVKDsQP_Ju19LnPE1MJeox6uEQpOPBD6=w585-h878-s-no-gm?authuser=0.jpg" alt="Foto Profil" />
-    <h1>Arif Rafi</h1>
+    <h1>Nur almani salwa</h1>
     <p>
-      Perkenalkan, nama saya Arif Rafi. Saya biasa dipanggil Rafi atau Uping. Saya lahir pada tanggal 7 Oktober 2008. Saya berasal dari Paroto dan tinggal bersama kedua orang 
+      Perkenalkan, nama saya Nur Amani Salwa. Saya biasa dipanggil salwa atau ica. Saya lahir pada tanggal 24 Oktober 2008. Saya berasal dari calio dan tinggal bersama kedua orang 
     </p>
     <h2>Hubungi saya:</h2>
     <ul>
@@ -57,3 +57,4 @@
   </div>
 </body>
 </html>
+
