--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
     </p>
     <h2>Hubungi saya:</h2>
     <ul>
-      <li><a href="https://instagram.com/r4fiii.7" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+      <li><a href="https://www.instagram.com/salewwwaaaa/?utm_source=ig_web_button_share_sheet" target="_blank" rel="noopener noreferrer">Instagram</a></li>
       <li><a href="https://github.com/s.id/arifrafiii" target="_blank" rel="noopener noreferrer">GitHub</a></li>
     </ul>
   </div>
 </body>
 </html>
+
 
