--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <div class="profile-card">
-  <img src="https://lh3.googleusercontent.com/pw/AP1GczMy8Q-06AHTne_vhUaMS18TAmQGgKODax1IadPrmlRcwOP7JmvQWjCVK7swB-VrKZcvb43sgggl95NvyngHgdJytyuXOCdbWgTXaBoB72CcqoOymlYZI9J5mVKDsQP_Ju19LnPE1MJeox6uEQpOPBD6=w585-h878-s-no-gm?authuser=0.jpg" alt="Foto Profil" />
+  <img src="https://photos.app.goo.gl/Yqj4jjCbArom8pHC8.jpg" alt="Foto Profil" />
     <h1>Nur almani salwa</h1>
     <p>
       Perkenalkan, nama saya Nur Amani Salwa. Saya biasa dipanggil salwa atau ica. Saya lahir pada tanggal 24 Oktober 2008. Saya berasal dari calio dan tinggal bersama kedua orang 
@@ -57,5 +57,6 @@
   </div>
 </body>
 </html>
+
 
 
