--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <div class="profile-card">
-  <img src="<a href="https://ibb.co.com/YFmKNgw9"><img src="https://i.ibb.co.com/YFmKNgw9/salwaaa.jpg" alt="salwaaa" border="0"></a>" alt="Foto Profil" />
+  <img src="https://i.ibb.co.com/YFmKNgw9/salwaaa.jpg" alt="salwaaa" border="0"></a>" alt="Foto Profil" />
     <h1>Nur almani salwa</h1>
     <p>
       Perkenalkan, nama saya Nur Amani Salwa. Saya biasa dipanggil salwa atau ica. Saya lahir pada tanggal 24 Oktober 2008. Saya berasal dari calio dan tinggal bersama kedua orang 
@@ -57,6 +57,7 @@
   </div>
 </body>
 </html>
+
 
 
 
