--- a/index.html
+++ b/index.html
@@ -47,7 +47,18 @@
   <img src="https://i.ibb.co.com/YFmKNgw9/salwaaa.jpg" alt="salwaaa"
     <h1>Nur almani salwa</h1>
     <p>
-      Perkenalkan, nama saya Nur Amani Salwa. Saya biasa dipanggil salwa atau ica. Saya lahir pada tanggal 24 Oktober 2008. Saya berasal dari calio dan tinggal bersama kedua orang 
+     # Hi there, I'm Nur Amani Salwa! 👋
+
+I am a student at **SMA Negeri 7 Soppeng** with a strong interest in leadership and academic competitions. You can call me **Salwa** or **Ica**.
+
+### 📌 About Me
+- 📍 Based in Calio, Soppeng, Indonesia.
+- 🎓 Student at SMA Negeri 7 Soppeng.
+- 👥 Active member of the **Student Council (OSIS)**.
+- 🥇 Regional finalist/participant in the **Academic Quiz Competition (Cerdas Cermat) at the South Sulawesi level**.
+
+### ⚡ Fun Fact
+I love being involved in organizations and exploring new challenges!
     </p>
     <h2>Hubungi saya:</h2>
     <ul>
@@ -57,6 +68,7 @@
   </div>
 </body>
 </html>
+
 
 
 
