--- a/index.html
+++ b/index.html
@@ -47,27 +47,23 @@
   <img src="https://i.ibb.co.com/YFmKNgw9/salwaaa.jpg" alt="salwaaa"
     <h1>Nur almani salwa</h1>
     <p>
-     # Hi there, I'm Nur Amani Salwa! 👋
+    Pelajar dari SMA Negeri 7 Soppeng yang aktif dalam bidang organisasi dan kompetisi akademik. Akrab disapa Salwa atau Ica, lahir pada 24 Oktober 2008 dan berdomisili di Calio.
 
-I am a student at **SMA Negeri 7 Soppeng** with a strong interest in leadership and academic competitions. You can call me **Salwa** or **Ica**.
+Pengalaman Utama
+Aktif sebagai pengurus OSIS di SMA Negeri 7 Soppeng, di mana saya mengasah kemampuan kepemimpinan dan manajemen tim. Selain organisasi, saya memiliki minat tinggi pada bidang akademik yang membawa saya menjadi perwakilan sekolah dalam lomba Cerdas Cermat di tingkat Provinsi Sulawesi Selatan.
 
-### 📌 About Me
-- 📍 Based in Calio, Soppeng, Indonesia.
-- 🎓 Student at SMA Negeri 7 Soppeng.
-- 👥 Active member of the **Student Council (OSIS)**.
-- 🥇 Regional finalist/participant in the **Academic Quiz Competition (Cerdas Cermat) at the South Sulawesi level**.
-
-### ⚡ Fun Fact
-I love being involved in organizations and exploring new challenges!
+Fokus dan Keahlian
+Saya berfokus pada pengembangan diri, pemecahan masalah secara kritis, dan berkontribusi aktif dalam lingkungan sekolah. Pengalaman di tingkat provinsi telah melatih saya untuk bekerja di bawah tekanan dan berpikir cepat.
     </p>
-    <h2>Hubungi saya:</h2>
+    <h2>contact:</h2>
     <ul>
       <li><a href="https://www.instagram.com/salewwwaaaa/?utm_source=ig_web_button_share_sheet" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-      <li><a href="https://github.com/s.id/arifrafiii" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+      <li><a 
     </ul>
   </div>
 </body>
 </html>
+
 
 
 
