--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@ Saya berfokus pada pengembangan diri, pemecahan masalah secara kritis, dan berko
     <h2>contact:</h2>
     <ul>
       <li><a href="https://www.instagram.com/salewwwaaaa/?utm_source=ig_web_button_share_sheet" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-      <li><a 
+      <li><a href=https://www.tiktok.com/@sallwaaaaa10?is_from_webapp target="_blank" rel="noopener noreferrer">tiktok</a></li>
     </ul>
   </div>
 </body>
 </html>
+
 
 
 
